// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should be render some Badge components 1`] = `
<div>
  <div
    class="sky-badge-wrapper badgecss__BadgeWrapper-cqs0r8-0 bNEfSO"
  >
    <div
      class="sky-badge-container sky-badge-container-null sky-badge-container-hide sky-badge-no-icon sky-badge-no-child"
      title="0"
    >
      0
    </div>
  </div>
  <div
    class="sky-badge-wrapper badgecss__BadgeWrapper-cqs0r8-0 bNEfSO"
  >
    <div
      class="sky-badge-container sky-badge-container-null sky-badge-no-icon sky-badge-no-child sky-badge-multiple-words"
      title="0"
    >
      88
    </div>
  </div>
  <div
    class="sky-badge-wrapper badgecss__BadgeWrapper-cqs0r8-0 bNEfSO"
  >
    <div
      class="sky-badge-container sky-badge-container-null sky-badge-container-dotted sky-badge-no-icon sky-badge-no-child"
      title="0"
    />
  </div>
  <div
    class="sky-badge-wrapper sky-badge-wrapper-status badgecss__BadgeWrapper-cqs0r8-0 bNEfSO"
  >
    <div
      class="sky-badge-container sky-badge-container-info sky-badge-container-hide sky-badge-no-icon sky-badge-no-child sky-badge-status-dot"
      title="0"
    />
  </div>
  <div
    class="sky-badge-wrapper sky-badge-wrapper-status badgecss__BadgeWrapper-cqs0r8-0 bNEfSO"
  >
    <div
      class="sky-badge-container sky-badge-container-info sky-badge-container-hide sky-badge-no-icon sky-badge-no-child sky-badge-status-dot"
      title="0"
    />
    <span
      class="sky-badge-status-text"
    >
      information
    </span>
  </div>
</div>
`;

exports[`Badge should render correct position when set offset 1`] = `
<div
  class="sky-badge-wrapper badgecss__BadgeWrapper-cqs0r8-0 fddydL"
>
  <div
    class="sky-badge-container sky-badge-container-null sky-badge-container-dotted sky-badge-no-icon sky-badge-no-child"
    title="0"
  />
</div>
`;

exports[`Badge should render custom icon when set count for a ReactNode 1`] = `
<div
  class="sky-badge-wrapper badgecss__BadgeWrapper-cqs0r8-0 bNEfSO"
>
  <div
    class="sky-badge-container sky-badge-container-null sky-badge-no-child sky-badge-multiple-words"
    title="0"
  >
    <div
      class="custom-icon"
    >
      icon
    </div>
  </div>
</div>
`;
